--- a/src/main/resources/com/example/comp1008a2st200497345/tv-guide.fxml
+++ b/src/main/resources/com/example/comp1008a2st200497345/tv-guide.fxml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.comp1008a2st200497345.TvGuideController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.comp1008a2st200497345.TvGuideController">
+   <children>
+      <BorderPane layoutX="201.0" prefHeight="400.0" prefWidth="601.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <ImageView fx:id="showCoverImage" fitHeight="500.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" />
+         </center>
+         <left>
+            <VBox prefHeight="700.0" prefWidth="236.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="titleLbl" text="Title:">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <font>
+                        <Font name="Bell MT" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="genreLbl" text="Genre:">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <font>
+                        <Font name="Bell MT" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="seasonsLbl" text="Seasons:">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <font>
+                        <Font name="Bell MT" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="ratingLbl" text="Rating:">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <font>
+                        <Font name="Bell MT" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </left>
+         <top>
+            <StackPane BorderPane.alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER" prefHeight="104.0" prefWidth="345.0" text="What's Playing">
+                     <font>
+                        <Font name="Berlin Sans FB" size="49.0" />
+                     </font>
+                  </Label>
+               </children>
+            </StackPane>
+         </top>
+         <right>
+            <Button fx:id="nextShowBtn" mnemonicParsing="false" onAction="#viewNextShow" prefHeight="91.0" prefWidth="163.0" text="View Next Show Playing" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="20.0" right="20.0" />
+               </BorderPane.margin>
+               <font>
+                  <Font name="Bell MT" size="13.0" />
+               </font>
+            </Button>
+         </right>
+      </BorderPane>
+   </children>
 </AnchorPane>
