--- a/src/main/resources/com/example/comp1008a2st200497345/tv-guide.fxml
+++ b/src/main/resources/com/example/comp1008a2st200497345/tv-guide.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.comp1008a2st200497345.TvGuideController">
+<AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.comp1008a2st200497345.TvGuideController">
    <children>
       <BorderPane layoutX="201.0" prefHeight="400.0" prefWidth="601.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -19,6 +19,14 @@
          <left>
             <VBox prefHeight="700.0" prefWidth="236.0" BorderPane.alignment="CENTER">
                <children>
+                  <Label fx:id="datePlayingLbl" text="Date Playing:">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <font>
+                        <Font name="Bell MT" size="20.0" />
+                     </font>
+                  </Label>
                   <Label fx:id="titleLbl" text="Title:">
                      <padding>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -66,12 +74,12 @@
             </StackPane>
          </top>
          <right>
-            <Button fx:id="nextShowBtn" mnemonicParsing="false" onAction="#viewNextShow" prefHeight="91.0" prefWidth="163.0" text="View Next Show Playing" BorderPane.alignment="CENTER">
+            <Button fx:id="nextShowBtn" mnemonicParsing="false" onAction="#viewNextShow" prefHeight="91.0" prefWidth="163.0" text="View Shows Playing" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets left="20.0" right="20.0" />
                </BorderPane.margin>
                <font>
-                  <Font name="Bell MT" size="13.0" />
+                  <Font name="Bell MT Bold" size="14.0" />
                </font>
             </Button>
          </right>
