--- a/src/main/resources/com/example/comp1008a2st200497345/add-shows.fxml
+++ b/src/main/resources/com/example/comp1008a2st200497345/add-shows.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -88,18 +87,7 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </VBox>
-                  <VBox>
-                     <children>
-                        <Label text="Select a date to add shows (Up to 6 days from today)">
-                           <VBox.margin>
-                              <Insets left="10.0" top="10.0" />
-                           </VBox.margin></Label>
-                        <DatePicker fx:id="datePicker">
-                           <VBox.margin>
-                              <Insets left="10.0" top="10.0" />
-                           </VBox.margin></DatePicker>
-                     </children>
-                  </VBox>
+                  <VBox />
                   <Button fx:id="addShowsBtn" mnemonicParsing="false" onAction="#addShowsToList" text="Add Selected Shows" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
